# text2mem

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  bench-cli  demo.sh  environment.yml  manage.py  pyproject.toml  simplify_bench.sh  text2mem-run
bench/: GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  USAGE_GUIDE.sh  __init__.py  __main__.py  run_pipeline.sh
bench/core/: benchmark_manager.py  builder.py  cli.py  runner.py
bench/docs/: README.md
bench/generate/: QUICK_REFERENCE.md  STATUS.md  generate.py
bench/output/: results_benchmark_20251022_035536.json  results_benchmark_20251022_035959.json  results_benchmark_20251022_040045.json  results_benchmark_20251022_170230.json  results_benchmark_20251022_184433.json
bench/tools/: README.md  __init__.py  build.py  clean.py  clean_benchmark.py  create_empty_db.py  migrate_data.py  migrate_to_v3.py  pipeline.py  run_manager.py  sample_generator.py  sql_builder_sqlite.py  stats.py  test.py  verify_setup.py
data/: README.md
docs/: CHANGELOG.md  CONFIG.md  CONFIGURATION.md  INSTALL.md  README.md
examples/: README.md
examples/configs/: openai_config.env
examples/ir_operations/: sample_ir_delete.json  sample_ir_demote.json  sample_ir_encode.json  sample_ir_expire.json  sample_ir_label.json  sample_ir_lock.json  sample_ir_merge.json  sample_ir_promote.json  sample_ir_retrieve.json  sample_ir_split.json  (+2 more)
scripts/: bench_planning.py  cli_core.py  cli_helpers.py  config_helpers.py  full_demo.py  inspect_splits.py
text2mem/: README_LAYOUT.md  __init__.py
(+105 files in other folders)
